[LFA] PF - ANTLR Compiler for a new Robotics-Focused Programming Language/language/cralParser.java
// Generated from cral.g4 by ANTLR 4.7.2

package language;

import lib.*;
import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class cralParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, BOOL=45, NUM=46, 
		ESC=47, ID=48, BLOCK_COMMENT=49, LINE_COMMENT=50, NL=51, WS=52, ERROR=53;
	public static final int
		RULE_program = 0, RULE_top = 1, RULE_type = 2, RULE_literal = 3, RULE_string = 4, 
		RULE_ref = 5, RULE_value = 6, RULE_declaration = 7, RULE_assignment = 8, 
		RULE_increment = 9, RULE_behaviourSet = 10, RULE_behaviourDeclare = 11, 
		RULE_actionCall = 12, RULE_functionCall = 13, RULE_argumentCall = 14, 
		RULE_functionDeclare = 15, RULE_argumentDeclare = 16, RULE_returnStat = 17, 
		RULE_statement = 18, RULE_block = 19, RULE_whenStat = 20, RULE_whileStat = 21, 
		RULE_untilStat = 22, RULE_forStat = 23, RULE_breakStat = 24, RULE_checkStat = 25, 
		RULE_otherStat = 26, RULE_forRange = 27, RULE_expr = 28, RULE_interval = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "top", "type", "literal", "string", "ref", "value", "declaration", 
			"assignment", "increment", "behaviourSet", "behaviourDeclare", "actionCall", 
			"functionCall", "argumentCall", "functionDeclare", "argumentDeclare", 
			"returnStat", "statement", "block", "whenStat", "whileStat", "untilStat", 
			"forStat", "breakStat", "checkStat", "otherStat", "forRange", "expr", 
			"interval"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'bool'", "'cond'", "'num'", "'string'", "'\"'", "'$'", "'local'", 
			"'='", "'^'", "'*'", "'/'", "'%'", "'+'", "'-'", "'++'", "'--'", "'set'", 
			"'behav'", "'until'", "':'", "'end'", "'call'", "'('", "')'", "','", 
			"'return'", "'when'", "'while'", "'for'", "'break'", "'other'", "'in'", 
			"'not'", "'is'", "'=='", "'!='", "'and'", "'or'", "'>='", "'<='", "'>'", 
			"'<'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "BOOL", "NUM", 
			"ESC", "ID", "BLOCK_COMMENT", "LINE_COMMENT", "NL", "WS", "ERROR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "cral.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public cralParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(cralParser.EOF, 0); }
		public List<TopContext> top() {
			return getRuleContexts(TopContext.class);
		}
		public TopContext top(int i) {
			return getRuleContext(TopContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cralVisitor ) return ((cralVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__6) | (1L << T__14) | (1L << T__15) | (1L << T__17) | (1L << ID))) != 0)) {
				{
				{
				setState(60);
				top();
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(66);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopContext extends ParserRuleContext {
		public TopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_top; }
	 
		public TopContext() { }
		public void copyFrom(TopContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class TopAssignContext extends TopContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public TopAssignContext(TopContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cralVisitor ) return ((cralVisitor<? extends T>)visitor).visitTopAssign(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TopDeclareContext extends TopContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public TopDeclareContext(TopContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cralVisitor ) return ((cralVisitor<? extends T>)visitor).visitTopDeclare(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TopBehaviourContext extends TopContext {
		public BehaviourDeclareContext behaviourDeclare() {
			return getRuleContext(BehaviourDeclareContext.class,0);
		}
		public TopBehaviourContext(TopContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cralVisitor ) return ((cralVisitor<? extends T>)visitor).visitTopBehaviour(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TopFunctionContext extends TopContext {
		public FunctionDeclareContext functionDeclare() {
			return getRuleContext(FunctionDeclareContext.class,0);
		}
		public TopFunctionContext(TopContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cralVisitor ) return ((cralVisitor<? extends T>)visitor).visitTopFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopContext top() throws RecognitionException {
		TopContext _localctx = new TopContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_top);
		try {
			setState(72);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new TopAssignContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				assignment();
				}
				break;
			case 2:
				_localctx = new TopDeclareContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				declaration();
				}
				break;
			case 3:
				_localctx = new TopBehaviourContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(70);
				behaviourDeclare();
				}
				break;
			case 4:
				_localctx = new TopFunctionContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(71);
				functionDeclare();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type res;
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cralVisitor ) return ((cralVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_type);
		try {
			setState(82);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				match(T__0);
				 ((TypeContext)_localctx).res = new BoolType(); 
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				match(T__1);
				 ((TypeContext)_localctx).res = new CondType(); 
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 3);
				{
				setState(78);
				match(T__2);
				 ((TypeContext)_localctx).res = new NumberType(); 
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 4);
				{
				setState(80);
				match(T__3);
				 ((TypeContext)_localctx).res = new StringType(); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public Type res;
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
	 
		public LiteralContext() { }
		public void copyFrom(LiteralContext ctx) {
			super.copyFrom(ctx);
			this.res = ctx.res;
		}
	}
	public static class LiteralStringContext extends LiteralContext {
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public LiteralStringContext(LiteralContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cralVisitor ) return ((cralVisitor<? extends T>)visitor).visitLiteralString(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LiteralBoolContext extends LiteralContext {
		public TerminalNode BOOL() { return getToken(cralParser.BOOL, 0); }
		public LiteralBoolContext(LiteralContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cralVisitor ) return ((cralVisitor<? extends T>)visitor).visitLiteralBool(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LiteralNumContext extends LiteralContext {
		public TerminalNode NUM() { return getToken(cralParser.NUM, 0); }
		public LiteralNumContext(LiteralContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cralVisitor ) return ((cralVisitor<? extends T>)visitor).visitLiteralNum(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_literal);
		try {
			setState(87);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOL:
				_localctx = new LiteralBoolContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				match(BOOL);
				}
				break;
			case NUM:
				_localctx = new LiteralNumContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				match(NUM);
				}
				break;
			case T__4:
				_localctx = new LiteralStringContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(86);
				string();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringContext extends ParserRuleContext {
		public List<ParserRuleContext> exprs;
		public List<TerminalNode> ESC() { return getTokens(cralParser.ESC); }
		public TerminalNode ESC(int i) {
			return getToken(cralParser.ESC, i);
		}
		public List<RefContext> ref() {
			return getRuleContexts(RefContext.class);
		}
		public RefContext ref(int i) {
			return getRuleContext(RefContext.class,i);
		}
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cralVisitor ) return ((cralVisitor<? extends T>)visitor).visitString(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_string);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(T__4);
			setState(95);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					setState(93);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						setState(90);
						match(ESC);
						}
						break;
					case 2:
						{
						setState(91);
						ref();
						}
						break;
					case 3:
						{
						setState(92);
						_la = _input.LA(1);
						if ( _la <= 0 || (_la==T__5) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						}
						break;
					}
					} 
				}
				setState(97);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(98);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RefContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public RefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ref; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cralVisitor ) return ((cralVisitor<? extends T>)visitor).visitRef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RefContext ref() throws RecognitionException {
		RefContext _localctx = new RefContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ref);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(T__5);
			setState(101);
			expr(0);
			setState(102);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public Type res;
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
	 
		public ValueContext() { }
		public void copyFrom(ValueContext ctx) {
			super.copyFrom(ctx);
			this.res = ctx.res;
		}
	}
	public static class AtomIDContext extends ValueContext {
		public TerminalNode ID() { return getToken(cralParser.ID, 0); }
		public AtomIDContext(ValueContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cralVisitor ) return ((cralVisitor<? extends T>)visitor).visitAtomID(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AtomCallContext extends ValueContext {
		public ActionCallContext actionCall() {
			return getRuleContext(ActionCallContext.class,0);
		}
		public AtomCallContext(ValueContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cralVisitor ) return ((cralVisitor<? extends T>)visitor).visitAtomCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AtomFunctionContext extends ValueContext {
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public AtomFunctionContext(ValueContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cralVisitor ) return ((cralVisitor<? extends T>)visitor).visitAtomFunction(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AtomLiteralContext extends ValueContext {
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public AtomLiteralContext(ValueContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cralVisitor ) return ((cralVisitor<? extends T>)visitor).visitAtomLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_value);
		try {
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new AtomLiteralContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(104);
				literal();
				}
				break;
			case 2:
				_localctx = new AtomCallContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				actionCall();
				}
				break;
			case 3:
				_localctx = new AtomFunctionContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(106);
				functionCall();
				}
				break;
			case 4:
				_localctx = new AtomIDContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(107);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public Token op;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(cralParser.ID, 0); }
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cralVisitor ) return ((cralVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(110);
				((DeclarationContext)_localctx).op = match(T__6);
				}
			}

			setState(113);
			type();
			setState(114);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	 
		public AssignmentContext() { }
		public void copyFrom(AssignmentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AssignIncContext extends AssignmentContext {
		public IncrementContext increment() {
			return getRuleContext(IncrementContext.class,0);
		}
		public AssignIncContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cralVisitor ) return ((cralVisitor<? extends T>)visitor).visitAssignInc(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignDeclareContext extends AssignmentContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignDeclareContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cralVisitor ) return ((cralVisitor<? extends T>)visitor).visitAssignDeclare(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignOpContext extends AssignmentContext {
		public Token op;
		public TerminalNode ID() { return getToken(cralParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignOpContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cralVisitor ) return ((cralVisitor<? extends T>)visitor).visitAssignOp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignIDContext extends AssignmentContext {
		public TerminalNode ID() { return getToken(cralParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignIDContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cralVisitor ) return ((cralVisitor<? extends T>)visitor).visitAssignID(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_assignment);
		int _la;
		try {
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new AssignDeclareContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				declaration();
				setState(117);
				match(T__7);
				setState(118);
				expr(0);
				}
				break;
			case 2:
				_localctx = new AssignIDContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(120);
				match(ID);
				setState(121);
				match(T__7);
				setState(122);
				expr(0);
				}
				break;
			case 3:
				_localctx = new AssignOpContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(123);
				match(ID);
				setState(124);
				((AssignOpContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13))) != 0)) ) {
					((AssignOpContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(125);
				match(T__7);
				setState(126);
				expr(0);
				}
				break;
			case 4:
				_localctx = new AssignIncContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(127);
				increment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncrementContext extends ParserRuleContext {
		public IncrementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_increment; }
	 
		public IncrementContext() { }
		public void copyFrom(IncrementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IncLeftExprContext extends IncrementContext {
		public Token op;
		public TerminalNode ID() { return getToken(cralParser.ID, 0); }
		public IncLeftExprContext(IncrementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cralVisitor ) return ((cralVisitor<? extends T>)visitor).visitIncLeftExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IncRightExprContext extends IncrementContext {
		public Token op;
		public TerminalNode ID() { return getToken(cralParser.ID, 0); }
		public IncRightExprContext(IncrementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cralVisitor ) return ((cralVisitor<? extends T>)visitor).visitIncRightExpr(this);
			else return visitor.visitChildren(this);
		}
	}
